--- a/app/src/main/res/drawable/splash_icon.xml
+++ b/app/src/main/res/drawable/splash_icon.xml
@@ -1,30 +1,39 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+  <path
+      android:pathData="M65.3,45.83l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.33 38.7,38.83 38.9,39.23l3.8,6.6C36.2,49.43 31.7,56.03 31,63.93h46C76.3,56.03 71.8,49.43 65.3,45.83zM43.4,57.33c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.53 44.5,57.33 43.4,57.33L43.4,57.33zM64.6,57.33c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.53 65.6,57.33 64.6,57.33L64.6,57.33z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m35.17,70.55q0,0.3 -0.14,0.59 -0.14,0.29 -0.39,0.49 -0.27,0.22 -0.64,0.34 -0.36,0.12 -0.88,0.12 -0.55,0 -0.99,-0.1 -0.44,-0.1 -0.89,-0.3v-0.85h0.05q0.39,0.32 0.89,0.5 0.51,0.17 0.95,0.17 0.63,0 0.98,-0.24 0.35,-0.24 0.35,-0.63 0,-0.34 -0.17,-0.5 -0.16,-0.16 -0.5,-0.25 -0.26,-0.07 -0.56,-0.11 -0.3,-0.04 -0.63,-0.11 -0.68,-0.14 -1,-0.49 -0.32,-0.35 -0.32,-0.91 0,-0.64 0.54,-1.05 0.54,-0.41 1.37,-0.41 0.54,0 0.98,0.1 0.45,0.1 0.79,0.25v0.8h-0.05q-0.29,-0.25 -0.77,-0.41 -0.47,-0.16 -0.97,-0.16 -0.54,0 -0.88,0.23 -0.33,0.23 -0.33,0.58 0,0.32 0.16,0.5 0.16,0.18 0.58,0.28 0.22,0.05 0.62,0.12 0.4,0.07 0.68,0.14 0.57,0.15 0.85,0.45 0.29,0.3 0.29,0.85z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m39.56,70.04q0,0.46 -0.13,0.85 -0.13,0.38 -0.38,0.65 -0.23,0.25 -0.53,0.39 -0.3,0.14 -0.65,0.14 -0.3,0 -0.54,-0.06 -0.24,-0.06 -0.49,-0.2v1.6h-0.64v-5.23h0.64v0.4q0.26,-0.22 0.57,-0.36 0.32,-0.15 0.68,-0.15 0.69,0 1.07,0.52 0.39,0.52 0.39,1.45zM38.9,70.06q0,-0.69 -0.24,-1.03 -0.24,-0.34 -0.72,-0.34 -0.28,0 -0.56,0.12 -0.28,0.12 -0.54,0.31v2.16q0.27,0.12 0.47,0.17 0.2,0.04 0.45,0.04 0.54,0 0.84,-0.36 0.3,-0.36 0.3,-1.07z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m41.21,72h-0.64v-5.32h0.64z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M45.45,72H44.81v-0.41q-0.09,0.06 -0.23,0.16 -0.14,0.1 -0.28,0.16Q44.14,72 43.93,72.05q-0.21,0.05 -0.49,0.05 -0.52,0 -0.88,-0.34 -0.36,-0.34 -0.36,-0.87 0,-0.43 0.18,-0.7 0.19,-0.27 0.53,-0.42 0.35,-0.15 0.84,-0.21 0.49,-0.05 1.05,-0.08v-0.1q0,-0.22 -0.08,-0.36 -0.08,-0.14 -0.22,-0.23 -0.14,-0.08 -0.33,-0.11 -0.19,-0.03 -0.4,-0.03 -0.25,0 -0.56,0.07 -0.31,0.06 -0.64,0.19h-0.03V68.26q0.19,-0.05 0.54,-0.11 0.36,-0.06 0.7,-0.06 0.4,0 0.7,0.07 0.3,0.06 0.52,0.23 0.22,0.16 0.33,0.41 0.11,0.25 0.11,0.62zM44.81,71.06V70q-0.29,0.02 -0.69,0.05 -0.4,0.03 -0.63,0.1 -0.28,0.08 -0.45,0.25 -0.17,0.16 -0.17,0.45 0,0.33 0.2,0.5 0.2,0.16 0.6,0.16 0.34,0 0.62,-0.13 0.28,-0.13 0.52,-0.32z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m49.42,70.9q0,0.52 -0.43,0.86 -0.43,0.33 -1.18,0.33 -0.42,0 -0.78,-0.1 -0.35,-0.1 -0.59,-0.22v-0.72h0.03q0.3,0.23 0.68,0.37 0.37,0.13 0.71,0.13 0.42,0 0.66,-0.14 0.24,-0.14 0.24,-0.43 0,-0.23 -0.13,-0.34 -0.13,-0.12 -0.5,-0.2 -0.14,-0.03 -0.36,-0.07 -0.22,-0.04 -0.4,-0.09 -0.5,-0.13 -0.71,-0.39 -0.21,-0.26 -0.21,-0.64 0,-0.24 0.1,-0.44 0.1,-0.21 0.3,-0.37 0.19,-0.16 0.49,-0.25 0.3,-0.1 0.66,-0.1 0.34,0 0.69,0.09 0.35,0.08 0.58,0.2v0.69h-0.03q-0.25,-0.18 -0.6,-0.3 -0.35,-0.13 -0.69,-0.13 -0.35,0 -0.59,0.14 -0.24,0.13 -0.24,0.4 0,0.24 0.15,0.36 0.14,0.12 0.46,0.19 0.18,0.04 0.4,0.08 0.22,0.04 0.37,0.08 0.45,0.1 0.69,0.35 0.24,0.25 0.24,0.67z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m53.53,72h-0.64v-2.17q0,-0.26 -0.03,-0.49 -0.03,-0.23 -0.11,-0.36 -0.09,-0.14 -0.25,-0.21 -0.16,-0.07 -0.42,-0.07 -0.26,0 -0.55,0.13 -0.29,0.13 -0.55,0.33V72h-0.64v-5.32h0.64v1.92q0.3,-0.25 0.62,-0.39 0.32,-0.14 0.66,-0.14 0.62,0 0.94,0.37 0.32,0.37 0.32,1.07z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m61.58,69.46q0,0.69 -0.3,1.26 -0.3,0.56 -0.8,0.88 -0.35,0.22 -0.78,0.31Q59.26,72 58.56,72h-1.29v-5.09h1.27q0.75,0 1.18,0.11 0.44,0.11 0.75,0.29 0.52,0.32 0.81,0.86 0.29,0.54 0.29,1.28zM60.87,69.45q0,-0.6 -0.21,-1.01 -0.21,-0.41 -0.62,-0.65 -0.3,-0.17 -0.64,-0.24 -0.34,-0.07 -0.81,-0.07L57.95,67.49v3.93h0.64q0.49,0 0.85,-0.07 0.37,-0.07 0.67,-0.27 0.38,-0.24 0.57,-0.64 0.19,-0.4 0.19,-0.99z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M65.82,70.16H63q0,0.35 0.11,0.62 0.11,0.26 0.29,0.43 0.18,0.16 0.42,0.25 0.25,0.08 0.54,0.08 0.39,0 0.78,-0.15 0.4,-0.16 0.56,-0.31h0.03v0.7q-0.32,0.14 -0.66,0.23 -0.34,0.09 -0.71,0.09 -0.95,0 -1.48,-0.51 -0.53,-0.52 -0.53,-1.46 0,-0.94 0.51,-1.49 0.51,-0.55 1.35,-0.55 0.77,0 1.19,0.45 0.42,0.45 0.42,1.28zM65.19,69.67q-0,-0.51 -0.26,-0.78 -0.25,-0.28 -0.76,-0.28 -0.52,0 -0.82,0.3 -0.3,0.3 -0.35,0.76z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M72.36,72H71.72v-2.17q0,-0.25 -0.02,-0.48 -0.02,-0.23 -0.09,-0.37 -0.08,-0.15 -0.23,-0.22 -0.15,-0.08 -0.42,-0.08 -0.27,0 -0.54,0.14 -0.27,0.13 -0.54,0.34 0.01,0.08 0.02,0.18 0.01,0.1 0.01,0.21V72h-0.64v-2.17q0,-0.25 -0.02,-0.48 -0.02,-0.23 -0.09,-0.37 -0.08,-0.15 -0.23,-0.22 -0.15,-0.08 -0.42,-0.08 -0.26,0 -0.53,0.13 -0.26,0.13 -0.53,0.33V72h-0.64v-3.82h0.64v0.42q0.3,-0.25 0.6,-0.39 0.3,-0.14 0.64,-0.14 0.39,0 0.66,0.16 0.27,0.16 0.41,0.45 0.39,-0.33 0.71,-0.47 0.32,-0.15 0.69,-0.15 0.63,0 0.93,0.38 0.3,0.38 0.3,1.06z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="m76.85,70.09q0,0.93 -0.48,1.47 -0.48,0.54 -1.28,0.54 -0.81,0 -1.29,-0.54 -0.48,-0.54 -0.48,-1.47 0,-0.93 0.48,-1.47 0.48,-0.54 1.29,-0.54 0.8,0 1.28,0.54 0.48,0.54 0.48,1.47zM76.19,70.09q0,-0.74 -0.29,-1.1 -0.29,-0.36 -0.81,-0.36 -0.52,0 -0.81,0.36 -0.29,0.36 -0.29,1.1 0,0.72 0.29,1.09 0.29,0.37 0.81,0.37 0.51,0 0.8,-0.37 0.29,-0.37 0.29,-1.09z"
+      android:fillColor="#ffffff"/>
 </vector>
